--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
 
-    <title> Storytale
-    </title>
+
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta property="og:image" href="images/OfficialLogo-09.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1,  shrink-to-fit=yes" />
+
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
 
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+
+    <link rel="icon" href="/images/OfficialLogo-09.png">
+
+
+    <!-- SEO Meta Tags -->
+
+    <meta name="Storytale" content="">
+
+    <meta name="storytale" content="">
+
+    <title> Storytale
+    </title>
 </head>
 
 <body class="is-preload">
@@ -22,7 +36,9 @@
         <header id="header">
 
             <nav class="coll_mainnav">
-                <button class="mainnav_mobile_toggle"><i class="fas fa-bars"></i></button>
+                <button class="mainnav_mobile_toggle" title="Toggle Navigation">
+                    <i class="fas fa-bars"></i>
+                  </button>
                 <ul class="coll_mainnav_menu">
                     <li>
                         <a href="index.html"><span class="coll_mainnav_link_text">Home</span><i class="fas fa-home"></i></a>
@@ -144,11 +160,11 @@
 
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script async src="assets/js/jquery.min.js"></script>
+    <script async src="assets/js/browser.min.js"></script>
+    <script async src="assets/js/breakpoints.min.js"></script>
+    <script async src="assets/js/util.js"></script>
+    <script async src="assets/js/main.js"></script>
 </body>
 
 
