--- a/levels.html
+++ b/levels.html
@@ -128,11 +128,11 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script async src="assets/js/jquery.min.js"></script>
+    <script async src="assets/js/browser.min.js"></script>
+    <script async src="assets/js/breakpoints.min.js"></script>
+    <script async src="assets/js/util.js"></script>
+    <script async src="assets/js/main.js"></script>
 
 
 </body>
