--- a/generic.html
+++ b/generic.html
@@ -5,7 +5,7 @@
 
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1,  shrink-to-fit=yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,  shrink-to-fit=no" />
 
 
     <!-- Stylesheets -->
@@ -58,7 +58,7 @@
 
                 <!-- Logo -->
                 <a href="generic.html" class="logo">
-                    <span class="symbol"><img src="images/OfficialLogo-09.png" alt="" /></span><span class="title">STORYTALE</span>
+                    <span class="symbol"><img src="images/432995_598936.png"  /></span><span class="title">STORYTALE</span>
                 </a>
             </div>
 
@@ -72,97 +72,278 @@
                     <h1>STORYTALE DESIGNS</h1>
                     <p>We are a design agency with a twist providing designs with a feel. Lets take your brand to a brand new level. </p>
 
-                    <h2>RECENT WORKS</h2>
+                    <center>
+                        <h2>RECENT WORKS</h2>
+                    </center>
                 </header>
+
+                <div class="Line">
+                    <span class="pricing-table-divider"></span>
+                    <center>
+                        <h2>Posters</h2>
+                    </center>
+                    <span class="pricing-table-divider"></span>
+                </div>
+
                 <section class="tiles">
                     <article class="style1">
                         <span class="image">
-										<img src="images/EK.jpg" alt src="images/pic01.jpg" />
+										<img src="images/Posters/EK.jpg" />
 									</span>
-                        <a href="">
+                        <a href="/images/Posters/EK.jpg">
                             <h2>Eliud</h2>
                         </a>
                     </article>
                     <article class="style2">
                         <span class="image">
-										<img src="images/nakushow.jpg" alt src="images/pic02.jpg" />
+										<img src="images/Posters/Becky.jpg"  />
 									</span>
-                        <a href="">
-                            <h2>Nakushow</h2>
+                        <a href="images/Posters/Becky.jpg">
+                            <h2>Becky</h2>
                         </a>
                     </article>
                     <article class="style3">
                         <span class="image">
-										<img src="images/Design-Plug.jpg"  alt src="images/pic03.jpg" />
+										<img src="images/Posters/crush.jpg" />
 									</span>
-                        <a href="">
-                            <h2>Design plug</h2>
+                        <a href="images/Posters/crush.jpg">
+                            <h2>Birthday Wish</h2>
 
                         </a>
                     </article>
                     <article class="style4">
                         <span class="image">
-										<img src="images/flyerr1.jpg" alt src="images/pic03.jpg" />
+										<img src="images/Posters/flyerr1.jpg"/>
 									</span>
-                        <a href="">
+                        <a href="images/Posters/flyerr1.jpg">
                             <h2>Flyer</h2>
 
                         </a>
                     </article>
-                    <article class="style5">
+
+
+                    <article class="style1">
                         <span class="image">
-										<img src="images/crush.jpg" alt src="images/pic02.jpg" />
+										<img src="images/Posters/nakushow.jpg"  />
 									</span>
-                        <a href="">
-                            <h2>Birthday wishes</h2>
+                        <a href="images/Posters/nakushow.jpg">
+                            <h2>Nakushow</h2>
                         </a>
                     </article>
 
                     <article class="style2">
                         <span class="image">
-										<img src="images/Pg1.jpg"  alt src="images/pic01.jpg" />
+										<img src="images/Posters/Pg1.jpg"  />
 									</span>
-                        <a href="">
-                            <h2>Storytale</h2>
+                        <a href="images/Posters/Pg1.jpg">
+                            <h2>Good Design</h2>
                         </a>
                     </article>
+
                     <article class="style3">
                         <span class="image">
-										<img src="images/pg1a.jpg" alt src="images/pic01.jpg" />
+										<img src="images/Posters/pg1a.jpg"  />
 									</span>
-                        <a href="">
-                            <h2>Growth</h2>
-
+                        <a href="images/Posters/pg1a">
+                            <h2>Aim for growth</h2>
                         </a>
                     </article>
-                    <article class="style1">
+
+                    <article class="style4">
                         <span class="image">
-										<img src="images/plann.jpg"  alt src="images/pic02.jpg" />
+										<img src="images/Posters/plann.jpg"  />
 									</span>
-                        <a href="">
-                            <h2>Plans</h2>
-
+                        <a href="images/Posters/plann.jpg">
+                            <h2>PLAN</h2>
                         </a>
                     </article>
+
                     <article class="style5">
                         <span class="image">
-										<img src="images/texascleaners-02-02.jpg"  alt src="images/pic03.jpg" />
+										<img src="images/Posters/work.jpg"/>
 									</span>
-                        <a href="">
-                            <h2>Services</h2>
+                        <a href="images/Posters/work.jpg">
+                            <h2>Teren Teren</h2>
+                        </a>
+                    </article>
+
+                    <article class="style1">
+                        <span class="image">
+										<img src="images/Posters/mockup-poster.jpg"  />
+									</span>
+                        <a href="images/Posters/mo">
+                            <h2>Mockup</h2>
+                        </a>
+                    </article>
+
+
+                    <div class="Line">
+                        <span class="pricing-table-divider"></span>
+
+                        <center>
+                            <h2>Logos</h2>
+                        </center>
+
+
+                    </div>
+
+
+                    <article class="style3">
+                        <span class="image">
+										<img src="images/Logos/Sema Tu-03.jpg"  />
+									</span>
+                        <a href="images/Logos/Sema Tu-03.jpg">
+                            <h2>Sema Tu</h2>
+
+                        </a>
+                    </article>
+
+                    <article class="style4">
+                        <span class="image">
+										<img src="images/Logos/Wholly-02.png"   />
+									</span>
+                        <a href="images/Logos/Wholly-02.png">
+                            <h2>Wholly </h2>
+
+                        </a>
+                    </article>
+
+
+                    <article class="style2">
+                        <span class="image">
+										<img src="images/Logos/IMG-20230609-WA0005.jpg"   />
+									</span>
+                        <a href="images/Logos/IMG-20230609-WA0005.jpg">
+                            <h2>Phone exhibit</h2>
+                        </a>
+                    </article>
+
+
+
+
+                    <div class="Line">
+                        <span class="pricing-table-divider"></span>
+
+                        <center>
+                            <h2> UI /UX</h2>
+                        </center>
+
+
+                    </div>
+
+
+
+                    <article class="style5">
+                        <span class="image">
+										<img src="images/UXUI/16d3c5171796771.6474f2235b3b7.png"   />
+									</span>
+                        <a href="images/UXUI/16d3c5171796771.6474f2235b3b7.png">
+                            <h2>web bag</h2>
 
                         </a>
 
                     </article>
+
+
+
+                    <article class="style2">
+                        <span class="image">
+										<img src="images/UXUI/a733b4171796127.6474f0092fbe9.png"   />
+									</span>
+                        <a href="images/UXUI/a733b4171796127.6474f0092fbe9.png">
+                            <h2>Furniture UX</h2>
+
+                        </a>
+                    </article>
+
+                    <article class="style3">
+                        <span class="image">
+										<img src="images/UXUI/braand-04.jpg"   />
+									</span>
+                        <a href="images/UXUI/braand-04.jpg">
+                            <h2>Sema Tu Podcast</h2>
+
+                        </a>
+                    </article>
+
+                    <article class="style4">
+                        <span class="image">
+										<img src="images/UXUI/IMG-20230609-WA0003.jpg"   />
+									</span>
+                        <a href="images/UXUI/IMG-20230609-WA0003.jpg">
+                            <h2>Sema tu Phone</h2>
+
+                        </a>
+                    </article>
+
+                    <article class="style5">
+                        <span class="image">
+										<img src="images/UXUI/IMG-20230609-WA0006.jpg"   />
+									</span>
+                        <a href="images/UXUI/IMG-20230609-WA0006.jpg">
+                            <h2>Sema Card</h2>
+
+                        </a>
+                    </article>
+
+                    <article class="style2">
+                        <span class="image">
+										<img src="images/UXUI/IMG-20230609-WA0007.jpg"   />
+									</span>
+                        <a href="images/UXUI/IMG-20230609-WA0007.jpg">
+                            <h2>Sema Hoodie</h2>
+
+                        </a>
+                    </article>
+
+
+                    <article class="style4">
+                        <span class="image">
+										<img src="images/UXUI/IMG-20230609-WA0008.jpg"   />
+									</span>
+                        <a href="images/UXUI/IMG-20230609-WA0008.jpg">
+                            <h2>Sema Bracelet</h2>
+
+                        </a>
+                    </article>
+
+
+                    <article class="style1">
+                        <span class="image">
+										<img src="images/UXUI/3ad76c172932423.64880a340dcc0.png"   />
+									</span>
+                        <a href="images/UXUI/3ad76c172932423.64880a340dcc0.png">
+                            <h2>Century UX</h2>
+
+                        </a>
+                    </article>
+
                     <article class="style6">
                         <span class="image">
-										<img src="images/mockup-poster.jpg"  alt src="images/pic02.jpg" />
+										<img src="images/UXUI/TheNewPortfolio-04.jpg"   />
 									</span>
-                        <a href="">
-                            <h2>Mockup poster</h2>
+                        <a href="images/UXUI/TheNewPortfolio-04.jpg">
+                            <h2>Sema Palette 2</h2>
 
                         </a>
                     </article>
+
+                    <article class="style6">
+                        <span class="image">
+										<img src="images/UXUI/20f2c6171794949.6474ec7e407cc.png"   />
+									</span>
+                        <a href="images/UXUI/20f2c6171794949.6474ec7e407cc.png">
+                            <h2>Track UX</h2>
+
+                        </a>
+                    </article>
+
+
+
+
+
+
+
 
                 </section>
             </div>
@@ -172,51 +353,45 @@
         <footer id="footer">
             <div class="promos">
                 <div class="promo">
+
                     <div class="deal">
-                        <span>Premium</span>
+                        <span>Basic Membership</span>
                         <span>This is really a good deal!</span>
                     </div>
-                    <span class="price">$79</span>
-                    <ul class="features">
-                        <li>Some great feature</li>
-                        <li>Another super feature</li>
-                        <li>And more...</li>
-                    </ul>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')">
+
+                    <span class="price ">$120</span>
+
+                    <ol class="features ">
+                        <li>One Request at a time</li>
+                        <li>Unlimited Branding requests</li>
+                        <li>A max of 30 Design requests</li>
+                        <li>Pause or Cancel anytime</li>
+                    </ol>
+
+                    <a class="btn " href="# ">
                         <b>Book Now</b>
                     </a>
 
                 </div>
-                <div class="promo_scale">
-                    <div class="deal">
-                        <span>Plus</span>
-                        <span>This is really a good deal!</span>
-                    </div>
-                    <span class="price">$89</span>
-                    <ul class="features">
-                        <li>Some great feature</li>
-                        <li>Another super feature</li>
-                        <li>And more...</li>
-                    </ul>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')">
-                        <b>
-                        Book Now
-                        </b>
-                    </a>
 
-                </div>
-                <div class="promo">
-                    <div class="deal">
-                        <span>Basic</span>
-                        <span>Basic membership</span>
+
+                <div class="promo ">
+                    <div class="deal ">
+                        <span>Premium</span>
+                        <span>Plus membership</span>
                     </div>
-                    <span class="price">$69</span>
-                    <ul class="features">
-                        <li>Choose the one on the left</li>
-                        <li>We need moneyy</li>
-                        <li>And more...</li>
-                    </ul>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')"><b>Book Now</b></a>
+                    <span class="price ">$250</span>
+                    <ol class="features ">
+
+
+                        <li>One Request at a time</li>
+                        <li>Unlimited Branding Requests</li>
+                        <li>Unlimited Design request</li>
+                        <li>Pause or Cancel anytime</li>
+                    </ol>
+                    <a class="btn " href="# ">
+                        <b>Book Now</b>
+                    </a>
 
                 </div>
             </div>
@@ -225,11 +400,11 @@
     </div>
 
     <!-- Scripts -->
-    <script async src="assets/js/jquery.min.js"></script>
-    <script async src="assets/js/browser.min.js"></script>
-    <script async src="assets/js/breakpoints.min.js"></script>
-    <script async src="assets/js/util.js"></script>
-    <script async src="assets/js/main.js"></script>
+    <script async src="assets/js/jquery.min.js "></script>
+    <script async src="assets/js/browser.min.js "></script>
+    <script async src="assets/js/breakpoints.min.js "></script>
+    <script async src="assets/js/util.js "></script>
+    <script async src="assets/js/main.js "></script>
 
 </body>
 
