--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-
     <link rel="icon" href="/images/OfficialLogo-09.png">
 
 
@@ -57,7 +56,7 @@
 
                 <!-- Logo -->
                 <a href="index.html" class="logo">
-                    <span class="symbol"><img src="images/OfficialLogo-09.png" alt="" /></span><span class="title">STORYTALE</span>
+                    <span class="symbol"><img src="images/432995_598936.png" alt="" /></span><span class="title">STORYTALE</span>
                 </a>
             </div>
 
@@ -71,10 +70,14 @@
             <div class="innerm">
 
                 <span class="image main">
-						<img src="images/braand-04.jpg"  alt src="images/pic02.jpg "/>
+						<img src="images/Design-Plug.jpg"  />
 					</span>
                 <div class="gallery">
-                    <h2>Design With Us</h2>
+                    <h2>Get me Designs
+                        <br>you need
+                        <p>
+                            take your brand to the next level</p>
+                    </h2>
                 </div>
             </div>
 
@@ -91,65 +94,55 @@
                     website design,
                     brand identity,
                     brand strategy </b>and <b>UI/UX design.</b></p>
-            <p>We provide simple designs with affordable design subscriptions to scale your business to a bran-new level</p>
-            <div class="text-container">
+            <p>We provide simple designs, with affordable design subscriptions to scale your business to a brand-new Level</p>
 
-
-            </div>
 
         </div>
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="promos">
-                <div class="promo">
-                    <div class="deal">
-                        <span>Premium</span>
-                        <span>This is really a good deal!</span>
-                    </div>
-                    <span class="price">$79</span>
-                    <ul class="features">
-                        <li>Some great feature</li>
-                        <li>Another super feature</li>
-                        <li>And more...</li>
-                    </ul>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')">
-                        <b>Book Now</b>
-                    </a>
 
-                </div>
-                <div class="promo_scale">
-                    <div class="deal">
-                        <span>Plus</span>
-                        <span>This is really a good deal!</span>
-                    </div>
-                    <span class="price">$89</span>
-                    <ul class="features">
-                        <li>Some great feature</li>
-                        <li>Another super feature</li>
-                        <li>And more...</li>
-                    </ul>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')">
-                        <b>
-                Book Now
-                </b>
-                    </a>
+        <div class="container">
+            <header class="major">
+                <center>
+                    <h2>Membership offers</h2>
+                    <p>Packages are so good you"ll never need to go anywhere else
+                        <br>for your design</p>
+                </center>
+            </header>
+            <div class="box alt">
+                <div class="row gtr-uniform">
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon fa-money-bills"></span>
+                        <h2>Affordable</h2>
+                        <h3> We care for you</h3>
+                        <p>The subscription is client friendly, you can pause or cancel at anytime</p>
+                    </section>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon  fa-chart-line "></span>
+                        <h2>Quality</h2>
+                        <h3>Top-notch</h3>
+                        <p>Insane design quality at your fingertips whenever you need them</p>
+                    </section>
 
-                </div>
-                <div class="promo">
-                    <div class="deal">
-                        <span>Basic</span>
-                        <span>Basic membership</span>
-                    </div>
-                    <span class="price">$69</span>
-                    <ul class="features">
-                        <li>Choose the one on the left</li>
-                        <li>We need moneyy</li>
-                        <li>And more...</li>
-                    </ul>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')"><b>Book Now</b></a>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon fa-hourglass-start  "></span>
+                        <h2>Fast</h2>
+                        <h3>A.S.A.P</h3>
+                    </section>
 
                 </div>
             </div>
+        </div>
+
+        <!-- Footer -->
+        <footer id="footer ">
+            <h2>
+                <center>
+                    <p> <br>
+                        <p>Packages are so good you"ll never need to go anywhere else <br>for your design</p>
+                </center>
+
+
+                </p>
+            </h2>
         </footer>
 
 
@@ -167,5 +160,7 @@
     <script async src="assets/js/main.js"></script>
 </body>
 
+
+</html>
 
 </html>
