--- a/levels.html
+++ b/levels.html
@@ -30,7 +30,7 @@
 
 <body class="is-preload">
     <!-- Wrapper -->
-    <div id="wrapper">
+    <div id="wrapperl">
 
         <!-- Header -->
         <header id="header">
@@ -59,7 +59,7 @@
 
                 <!-- Logo -->
                 <a href="generic.html" class="logo">
-                    <span class="symbol"><img src="images/OfficialLogo-09.png" alt="" /></span><span class="title">STORYTALE</span>
+                    <span class="symbol"><img src="images/432995_598936.png" alt="" /></span><span class="title">STORYTALE</span>
                 </a>
             </div>
 
@@ -78,48 +78,40 @@
             </h2>
             </br>
             <div class="pricing-table">
-                <div class="pricing-box">
-                    <h2>Free Membership</h2>
-                    <span class="price">Free Lifetime</span>
-                    <p class="description">dummy text of the printing and Designing industry...</p>
-                    <span class="pricing-table-divider"></span>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')"><b>Book Now</b></a>
 
-                    <span class="pricing-table-divider"></span>
-                    <ul>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                    </ul>
-
-                </div>
                 <div class="pricing-box">
                     <h2>Basic Membership</h2>
-                    <span class="price">$50/year</span>
+                    <span class="price">$120/month</span>
                     <p class="description">dummy text of the printing and Designing industry...</p>
                     <span class="pricing-table-divider"></span>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')"><b>Book Now</b></a>
+                    <a class="btn" href="#"><b>Book Now</b></a>
                     <span class="pricing-table-divider"></span>
                     <ul>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
+                        <li>One Request at a time</li>
+                        <li>Unlimited Branding requests</li>
+                        <li>A max of 30 Design requests</li>
+                        <li>Pause or Cancel anytime</li>
                     </ul>
                 </div>
-                <div class="pricing-box pricing-table-best">
-                    <h2>Advanced Membership</h2>
-                    <span class="price">$100/year</span>
+
+                <div class="pricing-box 2">
+
+                    <p class="description"></p>
+                </div>
+
+
+                <div class="pricing-box ">
+                    <h2>Plus Membership</h2>
+                    <span class="price">$250/month</span>
                     <p class="description">dummy text of the printing and Designing industry...</p>
                     <span class="pricing-table-divider"></span>
-                    <a class="btn" href="#" onclick="redirectToContact('+254114748466')"><b>Book Now</b></a>
+                    <a class="btn" href="#"><b>Book Now</b></a>
                     <span class="pricing-table-divider"></span>
                     <ul>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
-                        <li> dummy text</li>
+                        <li>One Request at a time</li>
+                        <li>Unlimited Branding Requests</li>
+                        <li>Unlimited Design request</li>
+                        <li>Pause or Cancel anytime</li>
                     </ul>
                 </div>
             </div>
