--- a/levels.html
+++ b/levels.html
@@ -120,11 +120,11 @@
     </div>
 
     <!-- Scripts -->
-    <script async src="assets/js/jquery.min.js"></script>
+    <script sync src="assets/js/jquery.min.js"></script>
     <script async src="assets/js/browser.min.js"></script>
     <script async src="assets/js/breakpoints.min.js"></script>
     <script async src="assets/js/util.js"></script>
-    <script async src="assets/js/main.js"></script>
+    <script sync src="assets/js/main.js"></script>
 
 
 </body>
